2013-10-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Don't attempt to resolve dependencies for unidentified packages.

	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies):
	[selected == NULL]: Current dependency is unresolved; do not make any
	recursive call for this unidentified requirement.  This avoids posting
	misleading "can't get 'tarname' for non-release element <<<unknown>>>"
	diagnostic messages, where the subsequent "unresolved dependency"
	message is sufficient; include dmhmsgs.h, and add...
	(PKGMSG_SPECIFICATION_ERROR): ...this preamble instead.

2013-10-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement foundation for future NLS enabled diagnostics.

	* src/dmhmsgs.h: New file; it declares the NLS capable DMH interface.
	* src/dmhmsgs.c: New file; it implements rudimentary NLS hooks, (but
	currently does not direct them to any NLS provider), together with an
	initial subset of a default (compiled in) message catalogue.

	* Makefile.in (CORE_DLL_OBJECTS): Add dmhmsgs.$OBJEXT

	* src/pkgname.cpp (pkgArchiveName): Modify diagnostics, to use...
	(PKGMSG_SPECIFICATION_ERROR): ...this dmhmsgs.h declared message.

2013-10-15  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add automated build time configuration management.

	* Makefile.in (Makefile): Add regeneration rules, depending on...
	(VERSION.m4, configure.ac, aclocal.m4, missing.m4, makeopts.m4):
	...these, if modified by the package maintainer, directed via...
	(config.status, configure): ...these, regenerated as required.

2013-10-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.6.2-mingw32-beta-20131004-1 released.

	* VERSION.m4 (VERSION_PATCH): Increment it.
	* srcdist-doc/NEWS.in: Release notes updated.
	* All files (r0-6-4-beta-20131004-1): Tag assigned.

2013-10-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Propagate RELEASE_CLASS setting from mingw-get-setup.
